[gd_scene load_steps=13 format=2]

[ext_resource path="res://temp_startmenu.jpg" type="Texture" id=1]
[ext_resource path="res://UIThemes/Fonts/TimeandSpace-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scenes/UI/StartMenu.gd" type="Script" id=3]
[ext_resource path="res://sprites/UI/settingsbutton.png" type="Texture" id=4]
[ext_resource path="res://sprites/UI/settingsbutton_hover.png" type="Texture" id=5]
[ext_resource path="res://sprites/UI/quitbutton.png" type="Texture" id=6]
[ext_resource path="res://sprites/UI/quitbutton_pressed.png" type="Texture" id=7]
[ext_resource path="res://sprites/UI/quitbutton_hover.png" type="Texture" id=8]
[ext_resource path="res://sprites/UI/settingsbutton_pressed.png" type="Texture" id=9]
[ext_resource path="res://UIThemes/UITheme.tres" type="Theme" id=13]

[sub_resource type="DynamicFont" id=2]
size = 40
outline_size = 1
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=1]
size = 14
use_filter = true
font_data = ExtResource( 2 )

[node name="StartMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 13 )
script = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 5

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
margin_right = 640.0
margin_bottom = 360.0

[node name="CenterContainer2" type="CenterContainer" parent="."]
margin_top = 64.0
margin_right = 640.0
margin_bottom = 113.0

[node name="Label" type="Label" parent="CenterContainer2"]
margin_left = 207.0
margin_right = 432.0
margin_bottom = 49.0
theme = ExtResource( 13 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Banished Trail"

[node name="Label2" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_right = 120.0
margin_bottom = 23.0
theme = ExtResource( 13 )
custom_fonts/font = SubResource( 1 )
text = "   WIP Build (DUH)"

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_left = 64.0
margin_top = 128.0
margin_right = 576.0
margin_bottom = 296.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 194.0
margin_top = 40.0
margin_right = 317.0
margin_bottom = 128.0

[node name="Start" type="Button" parent="CenterContainer/VBoxContainer"]
margin_right = 123.0
margin_bottom = 34.0
focus_mode = 0
theme = ExtResource( 13 )
text = "Start Game"

[node name="HSeparator" type="HSeparator" parent="CenterContainer/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 38.0
margin_right = 123.0
margin_bottom = 42.0

[node name="Items" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 46.0
margin_right = 123.0
margin_bottom = 80.0
hint_tooltip = "Not implemented yet
(Will be a way to look at and mark items
 for faster identification)"
focus_mode = 0
theme = ExtResource( 13 )
text = "Quest Items"

[node name="HSeparator3" type="HSeparator" parent="CenterContainer/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 84.0
margin_right = 123.0
margin_bottom = 88.0

[node name="QuitButton" type="TextureButton" parent="."]
margin_left = 584.0
margin_top = 304.0
margin_right = 632.0
margin_bottom = 352.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 8 )

[node name="SettingsButton" type="TextureButton" parent="."]
margin_left = 536.0
margin_top = 304.0
margin_right = 584.0
margin_bottom = 352.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 5 )

[connection signal="pressed" from="CenterContainer/VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Items" to="." method="_on_Items_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="SettingsButton" to="." method="_on_SettingsButton_pressed"]
